kelis subsubsections pridėjau

--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -26,7 +26,6 @@
 \author{Justas Tvarijonas}
 \secondauthor{Džiugas Mažulis}   
 \thirdauthor{Michal Stankiewicz}   
-% \fourthauthor{Vardonis Pavardonis}   % Pridėti ketvirtą autorių
 \supervisor{Kristina Lapin}
 \date{Vilnius – \the\year}
 
@@ -49,21 +48,31 @@ Darbo eigoje apžvelgsime pasisekusias vartotojo sąsajos realizacijas ir aptars
 	  Internetinė bankininkystė, finansai.
   \subsectionnonum{Probleminė sritis}
     Vartotojų patogumo gerinimas, patogus informacijos pateikimas.
-	\subsectionnonum{Naudotojai}
-		\begin{itemize}
-      \item Banko klientas - klientas turi galėti atlikti bankinius pervedimus, užsakymus, bei rasti norimą informaciją.
-      \item ?
-		\end{itemize}
+  \subsectionnonum{Naudotojai}
+  \begin{itemize}
+    \item Banko klientas - klientas turi galėti atlikti bankinius pervedimus, užsakymus, bei rasti norimą informaciją.
+    \item ?
+  \end{itemize}
+  \subsectionnonum{Darbo pagrindas}
+  Pirmojo laboratorinio darbo reikalavimai.
 \section{Būsimos sistemos įtakojamų asmenų kategorijos}
   \subsection{Suinteresuotų asmenų grupės}
     \begin{itemize}
-      \item Pirminiai - Banko klientai bei darbuotojai aptarnaujantys žmones
-      \item Antriniai - Banko savininkas, akcininkai(Užsakovai).
-      \item Tretiniai - Kiti bankai, kurių klientų skaičių įtakoja šio banko sekmė. 
+      \item Pirminiai - Banko klientai.
+      \item Antriniai - Banko darbuotojai, kurie žmonės aiškina, kaip naudotis sistema.
+      \item Tretiniai - Kiti bankai, kurių klientų skaičių įtakoja šio banko sekmė, akcininkai, kurių pajamos priklauso nuo banko sekmės 
     \end{itemize}
-\section{<Pirmos naudotojų grupės poreikiai}
+\section{Banko klientų poreikiai}
   \subsection{Naudotojų charakteristikos}
+  \subsubsection{Informacinių technologijų priemonės}
+  \subsubsection{Motyvacija ir galimybės tobulinti įgūdžius}
+  \subsubsection{Veiklų kontekstai}
+  \subsubsection{Naudotojų tipas}
   \subsection{Kompiuterizuojamų veiklų analizė}
+  \subsubsection{<pirmosios kompiuterizuojamos veiklos>? koncepcinis scenarijus}
+  \subsubsection{<pirmosios kompiuterizuojamos veiklos>? veiklų charakteristikos}
+  \subsubsection{<pirmojo scenarijaus> problemos ir tobulinimo galimybės}
+  \subsubsection{būsimasis patobulintas scenarijus}
   \subsection{Panaudojamumo siekiai ir matai}
 \section{Įkvepiančios esamų interfeisų idėjos}
 \section{Terminų žodynėlis(maybe)}
