--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -39,41 +39,56 @@
 Darbo eigoje apžvelgsime pasisekusias vartotojo sąsajos realizacijas ir aptarsime, kodėl būtent tokie sprendimai yra geresni už esamos sistemos sąsajų realizacijas.
 \begin{itemize}
 	\item Justas Tvarijonas - Tvarijonasjustas@gmail.com
-	\item Džiugas Mažulis - 
-	\item Michal Stankiewicz - 
+	\item Džiugas Mažulis -
+	\item Michal Stankiewicz -
 \end{itemize}
-
 \sectionnonum{Įvadas}
-	\subsectionnonum{Dalykinė sritis}
-	  Internetinė bankininkystė, finansai.
-  \subsectionnonum{Probleminė sritis}
-    Vartotojų patogumo gerinimas, patogus informacijos pateikimas.
-  \subsectionnonum{Naudotojai}
-  \begin{itemize}
-    \item Banko klientas - klientas turi galėti atlikti bankinius pervedimus, užsakymus, bei rasti norimą informaciją.
-    \item ?
-  \end{itemize}
-  \subsectionnonum{Darbo pagrindas}
-  Pirmojo laboratorinio darbo reikalavimai.
+\subsectionnonum{Dalykinė sritis}
+Internetinė bankininkystė, finansai.
+\subsectionnonum{Probleminė sritis}
+Vartotojų patogumo gerinimas, patogus informacijos pateikimas.
+\subsectionnonum{Naudotojai}
+\begin{itemize}
+	\item Banko klientas - klientas turi galėti atlikti bankinius pervedimus, užsakymus, bei rasti norimą informaciją.
+	\item ?
+\end{itemize}
+\subsectionnonum{Darbo pagrindas}
+Pirmojo laboratorinio darbo reikalavimai.
 \section{Būsimos sistemos įtakojamų asmenų kategorijos}
-  \subsection{Suinteresuotų asmenų grupės}
-    \begin{itemize}
-      \item Pirminiai - Banko klientai.
-      \item Antriniai - Banko darbuotojai, kurie žmonės aiškina, kaip naudotis sistema.
-      \item Tretiniai - Kiti bankai, kurių klientų skaičių įtakoja šio banko sekmė, akcininkai, kurių pajamos priklauso nuo banko sekmės 
-    \end{itemize}
+\subsection{Suinteresuotų asmenų grupės}
+\begin{itemize}
+	\item Pirminiai - Banko klientai.
+	\item Antriniai - Banko darbuotojai, kurie žmonės aiškina, kaip naudotis sistema.
+	\item Tretiniai - Kiti bankai, kurių klientų skaičių įtakoja šio banko sekmė, akcininkai, kurių pajamos priklauso nuo banko sekmės.
+\end{itemize}
 \section{Banko klientų poreikiai}
-  \subsection{Naudotojų charakteristikos}
-  \subsubsection{Informacinių technologijų priemonės}
-  \subsubsection{Motyvacija ir galimybės tobulinti įgūdžius}
-  \subsubsection{Veiklų kontekstai}
-  \subsubsection{Naudotojų tipas}
-  \subsection{Kompiuterizuojamų veiklų analizė}
-  \subsubsection{<pirmosios kompiuterizuojamos veiklos>? koncepcinis scenarijus}
-  \subsubsection{<pirmosios kompiuterizuojamos veiklos>? veiklų charakteristikos}
-  \subsubsection{<pirmojo scenarijaus> problemos ir tobulinimo galimybės}
-  \subsubsection{būsimasis patobulintas scenarijus}
-  \subsection{Panaudojamumo siekiai ir matai}
+\subsection{Naudotojų charakteristikos}
+\subsubsection{Informacinių technologijų priemonės}
+\begin{itemize}
+	\item Išmanusis telefonas (naršyklė bei smard-id).
+	\item Mobilusis parašas.
+	\item Asmeninių kompiuterių naršyklės.
+	\item Planšetinių kompiuterių naršyklės.
+\end{itemize}
+\subsubsection{Motyvacija ir galimybės tobulinti įgūdžius}
+\begin{itemize}
+	\item Klientai turi skirtingus IT įgūdžius.
+	\item Klientai skirtingais dažnumais naudojasi elektronine bankininkyste.
+\end{itemize}
+\subsubsection{Veiklų kontekstai}
+\begin{itemize}
+	\item Veikla yra pertraukiama. Klientas gali suformuluoti mokėjimą, tada užsiimti kita veikla ir vėliau grįžti užbaigti mokėjimą.
+	\item Mokėjimai atliekami su dideliu susikaupimu.
+	\item Naudojimasis sistema atliekamas saugioje aplinkoje.
+	\item Paprastai sistema naudojami turint aiškų tikslą.
+\end{itemize}
+\subsubsection{Naudotojų tipas}
+\subsection{Kompiuterizuojamų veiklų analizė}
+\subsubsection{<pirmosios kompiuterizuojamos veiklos>? koncepcinis scenarijus}
+\subsubsection{<pirmosios kompiuterizuojamos veiklos>? veiklų charakteristikos}
+\subsubsection{<pirmojo scenarijaus> problemos ir tobulinimo galimybės}
+\subsubsection{būsimasis patobulintas scenarijus}
+\subsection{Panaudojamumo siekiai ir matai}
 \section{Įkvepiančios esamų interfeisų idėjos}
 \section{Terminų žodynėlis(maybe)}
 
