--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -80,15 +80,26 @@ Pirmojo laboratorinio darbo reikalavimai.
 	\item Veikla yra pertraukiama. Klientas gali suformuluoti mokėjimą, tada užsiimti kita veikla ir vėliau grįžti užbaigti mokėjimą.
 	\item Mokėjimai atliekami su dideliu susikaupimu.
 	\item Naudojimasis sistema atliekamas saugioje aplinkoje.
-	\item Paprastai sistema naudojami turint aiškų tikslą.
+	\item Paprastai sistema naudojama turint aiškų tikslą.
 \end{itemize}
 \subsubsection{Naudotojų tipas}
+\begin{itemize}
+	\item Naujokai - šie naudotojai iš anksto nežino kur jiems reikia spausti norint pasiekti norimą tikslą. Juos gąsdina sudėtingas ir pilnas funkcionalumo pagrindinis langas, tačiau pastebi didesniu mygtukus ar užrašus, kurie skelbia jiem naudingą informaciją.
+	\item Vidutiniškai patyrę - šie naudotojai banko paslaugomis naudojasi pakankamai dažnai, kad efektyviai atliktu įprastus veiksmus, tačiau susiduria su problemomis norėdami atlikti sudėtingesnias operacijas.
+	\item Ekspertai - šie sistemos naudotojai puikiai išmano sistemą, jiems patogus didelio funkcionalumo sudėtingas interfeisas. Juos erzina didelis žingsnių skaičius bei į naujokus orientuota vartotojo sąsaja.
+\end{itemize}
 \subsection{Kompiuterizuojamų veiklų analizė}
 \subsubsection{<pirmosios kompiuterizuojamos veiklos>? koncepcinis scenarijus}
 \subsubsection{<pirmosios kompiuterizuojamos veiklos>? veiklų charakteristikos}
 \subsubsection{<pirmojo scenarijaus> problemos ir tobulinimo galimybės}
 \subsubsection{būsimasis patobulintas scenarijus}
 \subsection{Panaudojamumo siekiai ir matai}
+\begin{itemize}
+	\item Klientas galės pasiekti pavedimo langą nedaugiau kaip per 3 veiksmus.
+	\item Klientas žinodamos kokios informacijos ieško ją galės surasti neilgiau kaip per 5 min.
+	\item Naudotojas galės išfiltruoti mokėjimus bent pagal 4 skirtingus kriterijus.
+	\item 
+\end{itemize}
 \section{Įkvepiančios esamų interfeisų idėjos}
 \section{Terminų žodynėlis(maybe)}
 
