Teisingai apibrėžti savo duomenis.

--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -40,7 +40,7 @@ Darbo eigoje apžvelgsime pasisekusias vartotojo sąsajos realizacijas ir aptars
 \begin{itemize}
 	\item Justas Tvarijonas - Tvarijonasjustas@gmail.com
 	\item Džiugas Mažulis -
-	\item Michal Stankiewicz -
+	\item Michal Stankevič - michal.stankevic@gmail.com
 \end{itemize}
 \sectionnonum{Įvadas}
 \subsectionnonum{Dalykinė sritis}
