įdėjau kelis galbūt tinkančius įkvepiančius interfeisus

--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -148,14 +148,26 @@ Vartotojas norėdamas surasti informaciją apie banko nuomuojamus seifus:
 	\item Naudotojas galės išfiltruoti mokėjimus bent pagal 4 skirtingus kriterijus.
 	\item 
 \end{itemize}
+\pagebreak
 \section{Įkvepiančios esamų interfeisų idėjos}
-\begin{figure}
+\begin{figure}[!htb]
+  \includegraphics[scale=0.4]{mobileApp.png}
+  \caption{Mygtukai iš mobiliosios aplikacijos}
+	\label{fig:mobileApp}
+	Nauda: Piktogramos visiems labiau suprantamos, lengviau skaitomos, jų pagalba norimus puslapius galima rasti greičiau.
+\end{figure}
+\begin{figure}[!htb]
+  \includegraphics[width=\linewidth]{iconPlacement.png}
+  \caption{Mygtukų išdėstymas svetainėje}
+	\label{fig:iconPlacement}
+	Nauda: Vartotojui aiškus meniu, greitas vaikščiojimas tarp puslapių.
+\end{figure}
+\begin{figure}[!htb]
   \includegraphics[width=\linewidth]{SearchWindow.png}
-  \caption{1 Pav. Informacijos paieškos langas}
+  \caption{Informacijos paieškos langas}
 	\label{fig:searchWindow}
 	Nauda: Vendant tekstą ieškoma po kiekvieno įvesto simbolio, galima filtruoti pagal skirtingas grupes.
 \end{figure}
-
 \section{Terminų žodynėlis(maybe)}
 
 \end{document}
