--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -56,7 +56,6 @@ Vartotojų patogumo gerinimas, patogus informacijos pateikimas.
 \subsectionnonum{Naudotojai}
 \begin{itemize}
 	\item Banko klientas - klientas turi galėti atlikti bankinius pervedimus, užsakymus, bei rasti norimą informaciją.
-	\item ?
 \end{itemize}
 \subsectionnonum{Darbo pagrindas}
 Pirmojo laboratorinio darbo reikalavimai.
@@ -111,9 +110,9 @@ Veiklos trukmė: Informacijos paieška vidutiniškai užtrunka neilgai - iki 5 m
 	\item Paieška informacijos ieško ne iš viso galimo informacinio lauko.
 	\item Neradus rezultatų nėra pasiūlomas joks situacijos sprendimas.
 \end{itemize}
-\subsubsectionnonum{būsimasis patobulintas scenarijus}
+\subsubsectionnonum{Būsimasis patobulintas scenarijus}
 \begin{center}
-Vartotojas norėdamas surasti informaciją apie banko nuomuojamus seifus:
+\textbf{Vartotojas norėdamas surasti informaciją apie banko nuomuojamus seifus:}
 \end{center}
 \begin{enumerate}
 	\item Paspaudžia ant paieškos mygtuko pagrindiniame lange
@@ -144,14 +143,17 @@ Vartotojas norėdamas surasti informaciją apie banko nuomuojamus seifus:
 \subsection{Panaudojamumo siekiai ir matai}
 \begin{itemize}
 	\item Klientas galės pasiekti pavedimo langą nedaugiau kaip per 3 veiksmus.
-	\item Klientas žinodamos kokios informacijos ieško ją galės surasti neilgiau kaip per 5 min.
 	\item Naudotojas galės išfiltruoti mokėjimus bent pagal 4 skirtingus kriterijus.
-	\item 
+	\item Naudotojas galės filtruoti paieškos rezultatus pagal grupes
+	\item Naujas vartotojas paieškos langą surasti galės ne per ilgesnį laiką, nei 30 sekundžių.
+	\item Vartotojui įvedus ne mažiau, kaip 3 simbolius į paieškos langą bus siūlomi pilni paieškos tekstai
 \end{itemize}
 \pagebreak
 \section{Įkvepiančios esamų interfeisų idėjos}
 \begin{figure}[!htb]
-  \includegraphics[scale=0.4]{mobileApp.png}
+	\begin{center}
+	\includegraphics[scale=0.4]{mobileApp.png}
+	\end{center}
   \caption{Mygtukai iš mobiliosios aplikacijos}
 	\label{fig:mobileApp}
 	Nauda: Piktogramos visiems labiau suprantamos, lengviau skaitomos, jų pagalba norimus puslapius galima rasti greičiau.
@@ -168,6 +170,13 @@ Vartotojas norėdamas surasti informaciją apie banko nuomuojamus seifus:
 	\label{fig:searchWindow}
 	Nauda: Vendant tekstą ieškoma po kiekvieno įvesto simbolio, galima filtruoti pagal skirtingas grupes.
 \end{figure}
+\begin{figure}[!htb]
+	\begin{center}
+	\includegraphics[scale=0.2]{pagalbaGyvai.png}
+	\end{center}
+  \caption{Piktograma susisiekimui su pagalba gyvai}
+	\label{fig:pagalbaGyvai}
+	Nauda: greitas pagalbos naudojantis puslapiu pasiekimas, piktogramą galima nesunkiai patraukti.
+\end{figure}
 \section{Terminų žodynėlis(maybe)}
-
 \end{document}
