--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -37,24 +37,26 @@
 
 \begin{document}
 \maketitle
-\tableofcontents
 \sectionnonum{Anotacija}
 \subsectionnonum{Darbo tikslas}
-Naudojant į vartotoją orientuotą dizainą apibrėžti Swedbank internetinio banko dizaino pakeitimus.
+Naudojant į vartotoją orientuotą dizainą palengvinti bei pagerinti Swedbank internetinio banko puslapio naudojamumą bei efektyvumą taip padidinant puslapio našumą bei vartotojų pasitenkinimą.
+\subsectionnonum{Darbo pasiskirstymas}
 \begin{itemize}
-	\item Justas Tvarijonas - Tvarijonasjustas@gmail.com
-	\item Džiugas Mažulis - džiugas.mažulis@gmail.com
-	\item Michal Stankevič - michal.stankevic@gmail.com
+	\item Justas Tvarijonas - tvarijonasjustas@gmail.com \newline
+	Įvadas, kompiuterizuojamų veiklų analizė, įkvepiantys interfeisai.
+	\item Džiugas Mažulis - džiugas.mažulis@gmail.com \newline 
+	Kompiuterizuojamų veiklų analizė, įkvepiantys interfeisai.
+	\item Michal Stankevič - michal.stankevic@gmail.com \newline
+	 Kompiuterizuojamų veiklų analizė, įkvepiantys interfeisai.
 \end{itemize}
+\tableofcontents
 \sectionnonum{Įvadas}
 \subsectionnonum{Dalykinė sritis}
-Internetinė bankininkystė, finansai.
+Internetinė bankininkystė.
 \subsectionnonum{Probleminė sritis}
-Vartotojų patogumo gerinimas, patogus informacijos pateikimas.
+Vartotojų patogumo gerinimas, patogus informacijos pateikimas. Sistemos pateikimas aiškenia vartotojo sąsaja.
 \subsectionnonum{Naudotojai}
-\begin{itemize}
-	\item Banko klientas - klientas turi galėti atlikti bankinius pervedimus, užsakymus, bei rasti norimą informaciją.
-\end{itemize}
+	Banko klientas - turi galimybę atlikti mokėjimus, peržiūrėti sąskaitos išrašus, kurti mokėjimo ruošinius, ieškoti reikalingos informacijos.
 \subsectionnonum{Darbo pagrindas}
 Pirmojo laboratorinio darbo reikalavimai.
 \section{Būsimos sistemos įtakojamų asmenų kategorijos}
@@ -84,6 +86,8 @@ Pirmojo laboratorinio darbo reikalavimai.
 	\item Mokėjimai atliekami su dideliu susikaupimu.
 	\item Naudojimasis sistema atliekamas saugioje aplinkoje.
 	\item Paprastai sistema naudojama turint aiškų tikslą.
+	\item Apsilankymas banko svetainėje paprastai trunka iki 30 minučių.
+	\item Banko klientai svetainėje apsilanko bent kelis kartus į mėnesį.
 \end{itemize}
 \subsubsection{Naudotojų tipas}
 \begin{itemize}
@@ -198,17 +202,18 @@ Veiklos trukmė: Mokėjimo ruošinio sukūrimas turėtų užtrukti iki 10 minuč
 \end{enumerate}
 \subsection{Panaudojamumo siekiai ir matai}
 \begin{itemize}
-	\item Klientas galės pasiekti pavedimo langą nedaugiau kaip per 3 veiksmus.
-	\item Naudotojas galės išfiltruoti mokėjimus bent pagal 4 skirtingus kriterijus.
-	\item Naudotojas galės filtruoti paieškos rezultatus pagal grupes
+	\item Naudotojas galės filtruoti paieškos rezultatus pagal skirtingas rastas grupes
 	\item Naujas vartotojas paieškos langą surasti galės ne per ilgesnį laiką, nei 30 sekundžių.
+	\item 90\% paieškų bus rezultatyvios.
 	\item Vartotojui įvedus ne mažiau, kaip 3 simbolius į paieškos langą bus siūlomi pilni paieškos tekstai
 	\item Vartotojas galės mokėjimo ruošinių ieškoti pagal pavadinimą, gavėją bei mokėjimo paskirtį
+	\item Mokėjimo ruošinio sukurimo langą vartotojas galės pasiekti ne per daugiau, negu 3 mygtukų paspaudimus.
 	\item Kurdamas mokėjimo ruošinį vartotojas gaus bent 2 pasirinkimus jam sukurti.
 	\item Klientas galės įvesti sumą bei pradėti pavedimą pagrindiniame lange.
 	\item Klientas galės pasirinkti gavėją iš gavėjų arba ankstesnių gavėjų sąrašų.
 	\item Rinkdamasis gavėją iš pateiktų sąrašų, klientas galės atlikti pavedimą 3 mygtukų paspaudimu.
 	\item Pavedimo atlikimas truks ne ilgiau kaip 2 minutes.
+	\item 95\% klientų iš pirmo karto ras kaip atlikti pavedimą.
 \end{itemize}
 \pagebreak
 \section{Įkvepiančios esamų interfeisų idėjos}
